MingNhu commit code: Promotions.